Week 1_PySpark notebook

--- a/Team_1_PySpark_Week_1.ipynb
+++ b/Team_1_PySpark_Week_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "3cbf1d66",
    "metadata": {},
    "outputs": [],
@@ -16,28 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "a986ccad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pyspark.sql.dataframe.DataFrame"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "dc6b2a39",
    "metadata": {},
    "outputs": [
@@ -112,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "02b19bb8",
+   "execution_count": 53,
+   "id": "a3ccb45a",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +101,7 @@
        "392.2172595594006"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,40 +114,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "id": "15122883-9d9a-49f9-bb0e-2274df985c3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyspark.pandas as ps\n",
     "\n",
     "def getDistance(start_lat, start_long, end_lat, end_long):\n",
-    "    return round(\n",
-    "        haversine(\n",
-    "            [ float(start_lat), float(start_long) ],\n",
-    "            [ float(end_lat), float(end_long) ],\n",
-    "            unit=Unit.METERS\n",
-    "        ), 2\n",
+    "    return haversine(\n",
+    "        [ float(start_lat), float(start_long) ],\n",
+    "        [ float(end_lat), float(end_long) ],\n",
+    "        unit=Unit.METERS\n",
     "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "7d786225",
+   "execution_count": 66,
+   "id": "9b9b2054",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import FloatType\n",
     "\n",
-    "getDistanceUDF = udf(lambda a,b,c,d : getDistance(a,b,c,d) )\n",
-    "df = df.withColumn(\"Distance\", getDistanceUDF(df[\"start_station_latitude\"], df[\"start_station_longitude\"], df[\"end_station_latitude\"], df[\"end_station_longitude\"]))"
+    "getDistanceUDF = udf(lambda a,b,c,d : getDistance(a,b,c,d), FloatType())\n",
+    "\n",
+    "df = df.withColumn(\"Distance\", \n",
+    "        getDistanceUDF(\n",
+    "            df[\"start_station_latitude\"], \n",
+    "            df[\"start_station_longitude\"], \n",
+    "            df[\"end_station_latitude\"], \n",
+    "            df[\"end_station_longitude\"]\n",
+    "        )\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "a05050e7",
+   "execution_count": 67,
+   "id": "56c03046",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +176,7 @@
       " |-- member_birth_year: string (nullable = true)\n",
       " |-- member_gender: string (nullable = true)\n",
       " |-- pyment: string (nullable = true)\n",
-      " |-- Distance: string (nullable = true)\n",
+      " |-- Distance: float (nullable = true)\n",
       "\n"
      ]
     }
@@ -202,38 +187,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "3438e470",
+   "execution_count": 68,
+   "id": "f8060a69",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+\n",
-      "|Distance|\n",
-      "+--------+\n",
-      "|  942.93|\n",
-      "| 3069.73|\n",
-      "|     0.0|\n",
-      "| 1046.62|\n",
-      "|  636.34|\n",
-      "|     0.0|\n",
-      "|     0.0|\n",
-      "|     0.0|\n",
-      "|     0.0|\n",
-      "|     0.0|\n",
-      "|   771.3|\n",
-      "|   771.3|\n",
-      "| 1517.35|\n",
-      "| 1517.35|\n",
-      "|  1422.6|\n",
-      "| 1050.26|\n",
-      "| 1050.26|\n",
-      "| 2856.34|\n",
-      "| 2856.34|\n",
-      "| 2859.25|\n",
-      "+--------+\n",
+      "+---------+\n",
+      "| Distance|\n",
+      "+---------+\n",
+      "| 942.9307|\n",
+      "|3069.7302|\n",
+      "|      0.0|\n",
+      "| 1046.624|\n",
+      "| 636.3403|\n",
+      "|      0.0|\n",
+      "|      0.0|\n",
+      "|      0.0|\n",
+      "|      0.0|\n",
+      "|      0.0|\n",
+      "|771.30164|\n",
+      "|771.30164|\n",
+      "|1517.3505|\n",
+      "|1517.3505|\n",
+      "|1422.5966|\n",
+      "|1050.2638|\n",
+      "|1050.2638|\n",
+      "|2856.3367|\n",
+      "|2856.3367|\n",
+      "| 2859.246|\n",
+      "+---------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -253,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 69,
    "id": "5f94da52-13a7-4add-891b-49e1abd2d26a",
    "metadata": {},
    "outputs": [
@@ -366,8 +351,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "91824362-b2ba-4bc9-b664-84e368f932b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- start_time: string (nullable = true)\n",
+      " |-- end_time: string (nullable = true)\n",
+      " |-- start_station_id: string (nullable = true)\n",
+      " |-- start_station_name: string (nullable = true)\n",
+      " |-- start_station_latitude: string (nullable = true)\n",
+      " |-- start_station_longitude: string (nullable = true)\n",
+      " |-- end_station_id: string (nullable = true)\n",
+      " |-- end_station_name: string (nullable = true)\n",
+      " |-- end_station_latitude: string (nullable = true)\n",
+      " |-- end_station_longitude: string (nullable = true)\n",
+      " |-- bike_id: string (nullable = true)\n",
+      " |-- user_type: string (nullable = true)\n",
+      " |-- member_birth_year: string (nullable = true)\n",
+      " |-- member_gender: string (nullable = true)\n",
+      " |-- pyment: string (nullable = true)\n",
+      " |-- Distance: float (nullable = true)\n",
+      " |-- starttime: timestamp (nullable = true)\n",
+      " |-- endtime: timestamp (nullable = true)\n",
+      " |-- duration: timestamp (nullable = true)\n",
+      " |-- duration_second: integer (nullable = true)\n",
+      " |-- fee_of_trip: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af857ab5",
    "metadata": {},
    "outputs": [],
    "source": []
