--- a/w2task2.ipynb
+++ b/w2task2.ipynb
@@ -2,34 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4e9728c2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/02/07 17:38:16 WARN Utils: Your hostname, murats-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.68.109 instead (on interface en0)\n",
-      "23/02/07 17:38:16 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/02/07 17:38:17 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/02/07 17:38:18 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -61,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "520337ee",
    "metadata": {},
    "outputs": [
@@ -103,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6c31b90a",
    "metadata": {},
    "outputs": [
@@ -111,7 +87,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 1:=======>                                                   (1 + 7) / 8]\r"
+      "\r",
+      "[Stage 1:>                                                          (0 + 8) / 8]\r"
      ]
     },
     {
@@ -153,65 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a63ccccb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 4:>                                                          (0 + 8) / 8]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------+\n",
-      "|member_gender|\n",
-      "+-------------+\n",
-      "|         null|\n",
-      "|       Female|\n",
-      "|        Other|\n",
-      "|         Male|\n",
-      "+-------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                                \r"
-     ]
-    }
-   ],
-   "source": [
-    "#find the ratio of using as male or female\n",
-    "df.select(\"member_gender\").distinct().show()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "8923c7c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "top10_stations = [row[0] for row in trips_number.collect()[:10]]\n",
-    "topStationsDF = df.filter(\n",
-    "    (df['start_station_id'].isin(top10_stations)) \n",
-    "    & (df['member_gender'].isin([\"Female\", \"Male\"]))\n",
-    ")\n",
+    "topStationsDF = df.filter(df['start_station_id'].isin(top10_stations))\n",
     "#topStationsDF.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "ca5fc19f",
    "metadata": {},
    "outputs": [
@@ -242,7 +173,7 @@
     "\n",
     "byGender = topStationsDF.groupBy(\"start_station_id\").pivot(\"member_gender\").count()\n",
     "byGender = byGender.withColumn(\"Rate\", round(byGender[\"Female\"]/byGender[\"Male\"], 2))\n",
-    "byGender.show()"
+    "byGender.drop(\"null\", \"Other\").show()"
    ]
   },
   {
