The preferred way to pay of customers and subscriber

--- a/w3task5.ipynb
+++ b/w3task5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e0336246",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/02/13 18:55:52 WARN Utils: Your hostname, murats-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.68.101 instead (on interface en0)\n",
-      "23/02/13 18:55:52 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/02/16 17:46:55 WARN Utils: Your hostname, murats-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.68.101 instead (on interface en0)\n",
+      "23/02/16 17:46:55 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/02/13 18:55:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/02/16 17:46:56 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -55,10 +55,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
+   "id": "882d3f98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+-----------+\n",
+      "| user_type|app wallet|credit card|\n",
+      "+----------+----------+-----------+\n",
+      "|Subscriber|    204727|     204503|\n",
+      "|  Customer|     55334|      55136|\n",
+      "+----------+----------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "table = df.groupBy(\"user_type\").pivot(\"pyment\").count()\n",
+    "table.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "87b50304",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 1:>                                                          (0 + 8) / 8]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -72,6 +112,14 @@
       "|Subscriber|credit card|204503|\n",
       "+----------+-----------+------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
